styling: setting fonts, colors, etc.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <small>Signal Design Rails Starter App</small>
+  <small>&copy; 2012 Cognitopia Software, LLC</small>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
