--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,7 @@
 <header class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-    	<div class="pull-left"><%= link_to image_tag("PVlogo.png", alt: "Getting Out"), root_path %></div>
-      <h3 class="pull-left push-down1"><%= link_to "Gettin Out", 'home', id: "logo" %></h3>
+    	<div class="pull-left"><%= link_to image_tag("gettinout_logo.png", alt: "Getting Out", class: "logo"), root_path %></div>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
