--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3560,21 +3560,7 @@ input[type="submit"].btn.btn-mini {
   min-height: 40px;
   padding-right: 20px;
   padding-left: 20px;
-  background-color: #4f9cba;
-  background-image: -moz-linear-gradient(top, #4f9cba, #0e6890);
-  background-image: -ms-linear-gradient(top, #4f9cba, #0e6890);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4f9cba), to(#0e6890));
-  background-image: -webkit-linear-gradient(top, #4f9cba, #0e6890);
-  background-image: -o-linear-gradient(top, #4f9cba, #0e6890);
-  background-image: linear-gradient(top, #4f9cba, #0e6890);
-  background-repeat: repeat-x;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#4f9cba', endColorstr='#0e6890', GradientType=0);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  background-color: ##c4e3fc;
 }
 
 .navbar .container {
