--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,10 @@ html {
 }
 
 body {
-  padding-top: 170px;
+  padding-top: 100px;
+  background-color: #c4e3fc;
+  font-family: 'AmaranthRegular', Arial, sans-serif;
+  font-size: 110%;
 }
 
 section {
@@ -24,6 +27,34 @@ $grayLighter : #9e9e9e;
   box-sizing: border-box;
 }
 
+/* typography */
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'AmaranthBold', Arial, sans-serif;
+  color: #0568c4;
+  font-weight: normal;
+  margin: 0 0 8px 0;
+  text-align: left;
+}
+h1 {
+  font-size: 40px;
+}
+h2 {
+  font-size: 36px;
+}
+h3 {
+  font-size: 30px;
+}
+h4 {
+  font-size: 24px;
+}
+h5 {
+  font-size: 20px;
+}
+h6 {
+  font-size: 18px;
+}
+
+
 /* alignment and moving things around */
 .center {
   text-align: center;
@@ -34,6 +65,9 @@ $grayLighter : #9e9e9e;
 
 .push-down1 {
 	margin-top:25px;
+}
+.logo {
+  margin-top:15px;
 }
 
 /* tweaks to bootstrap */
@@ -50,6 +84,7 @@ $grayLighter : #9e9e9e;
 
 .btn-large {
   margin-top:15px;
+  font-size:20px;
  }
 
 a {
@@ -58,17 +93,43 @@ a {
 .whitetype {
   color:white;
 }
+.container,
+.navbar-fixed-top .container,
+.navbar-fixed-bottom .container {
+  width: 724px;
+}
+.navbar-fixed-top .container,
+.navbar-fixed-bottom .container {
+  width: 724px;
+}
+.navbar .nav {
+  position: relative;
+  left: 0;
+  top: 50px;
+  display: block;
+  float: left;
+  margin: 0 10px 0 0;
+}
+.hero-unit {
+  padding: 25px 60px;
+  margin-bottom: 30px;
+  background-color: #72bffa;
+  -webkit-border-radius: 20px;
+     -moz-border-radius: 20px;
+          border-radius: 20px;
+  border: solid 6px white;
+}
 
 /* footer */
 
 footer {
   margin: 45px auto 20px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  width:940px;
-  color: $grayLight;
+  border-top: 2px solid white;
+  width:724px;
+  color: white;
   a {
-  	color: #555;
+  	color: white;
   	&:hover { 
   		color: black;
   		text-decoration: none;
