--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing activity</h1>
-
+<h3>Editing activity</h3>
+<div class="hero-unit-scaffold">
 <%= render 'form' %>
 
 <%= link_to 'Show', @activity %> |
 <%= link_to 'Back', activities_path %>
+
+</div>
