--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<% @activity = Activity.find(params[:id]) %>
 <p>
   <b>Date:</b>
   <%= @event.date %>
@@ -7,8 +7,8 @@
 
 <p>
   <b>Activity:</b>
-  <%= @event.activity.title %>
-  <%= image_tag @event.activity.image_url(:minithumb).to_s %>
+  <%= @activity.title %>
+  <%= image_tag @activity.image_url(:minithumb).to_s %>
 </p>
 
 
