changes to Event views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 /* *= require jquery.ui.datepicker */
 
 @import "fonts.css";
-@import "formtastic.css";
+@import "formtastic.css.scss";
 @import "jquery-ui-start.css.scss";
 @import "bootstrap-responsive.css";
 @import "bootstrap.css";
