--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -4,7 +4,7 @@
 
 <p><b>Location:</b><%= @activity.location %></p>
 
-<p><%= image_tag @activity.image_url(:thumb).to_s %></p>
+<p><%= image_tag @activity.image_url(:thumb).to_s, :class => 'img-rounded' %></p>
 
 
 <%= link_to 'Edit', edit_activity_path(@activity) %> |
