--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @activity %> |
-<%= link_to 'Back', activities_path %>
+<%= link_to 'Activity List', activities_path %>
 
 </div>
