--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= activity.location %></td>
     <td class="action"><%= link_to 'Show', activity %></td>
     <td class="action"><%= link_to 'Edit', edit_activity_path(activity) %></td>
-    <td class="action"><%= link_to 'Destroy', activity, confirm: 'Are you sure?', method: :delete %></td>
+    <td class="action"><%= link_to 'Delete', activity, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
