--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br />
+    <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :location %><br />
+    <%= f.label :location %>
     <%= f.text_field :location %>
   </div>
   <div class="field">
@@ -32,6 +32,6 @@
     <% end %>
   </div>
   <div class="actions pushdown1">
-    <%= f.submit 'Submit Changes', class: "btn btn-medium btn-primary"  %>
+    <%= f.submit 'Submit', class: "btn btn-medium btn-primary"  %>
   </div>
 <% end %>
