--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New activity</h1>
-
+<h3>New activity</h3>
+<div class="hero-unit-scaffold">
 <%= render 'form' %>
 
-<%= link_to 'Back', activities_path %>
+<%= link_to 'Activity List', activities_path %>
+</div>
