--- a/app/views/events/event.html.erb
+++ b/app/views/events/event.html.erb
@@ -2,11 +2,12 @@
 
 	<% @creator = current_user %>
 		<div class="minithumb"><%= image_tag @creator.image_url(:minithumb).to_s, :class => 'img-rounded' %>
-	  
+	  <p class="minithumbtext"><%= @creator.username %></p></div>
 	  <p id="wantsto" class="hidden">would like to<br/> get out for</p>
 
 		<div id="datechosen" class="hidden">
-				<p id="ondate">on <span id="thedate"></span></p>
+			<p id="ondate">on <span id="thedate"></span></p>
+  		<p id="saveout"><%= link_to "Save Out!", signup_path, class: "btn btn-medium btn-primary" %></p>
 		</div>
 
 	<div id="activitylist" class="clearfloats"></div>
